--- a/src/components/organisms/Navbar/Navbar.module.css
+++ b/src/components/organisms/Navbar/Navbar.module.css
@@ -14,12 +14,18 @@
 }
 
 
+.scrolled {
+  background-color: var(--color-blue)
+}
+
 .heroImg {
   width: 10%;
   height: 10%;
   z-index: 0;
   border-radius: 50%;
   min-width: 25px;
+  max-width: 90px;
+
 }
 
 .title {
@@ -91,9 +97,8 @@
   .navbar {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     height: 10vh;
-    padding: 5%;
     justify-content: space-between;
   }
 
