--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,8 +29,8 @@ body {
 }
 
 .container {
-  background-color: black;
-  color: #fff;
+  background-color: white;
+  color: var(--color-red);
   height: 100%;
   width: 100%;
   display: flex;
