--- a/src/components/organisms/Contact/Contact.module.css
+++ b/src/components/organisms/Contact/Contact.module.css
@@ -1,9 +1,33 @@
 .container {
-  max-width: 500px;
-  margin: 15vh auto;
+  margin: 5vh auto;
   text-align: center;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 
+    /* Pour centrer verticalement et horizontalement */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.contact {
+  width: 40vw;
+  height: 400px;
+}
+
+
+.mapContainer {
+  width: 40vw;
+  height: 400px;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
 }
 
 .title {
@@ -30,7 +54,7 @@ textarea {
 }
 
 button {
-  background-color: #007bff;
+  background-color: var(--color-red);
   color: white;
   border: none;
   padding: 10px;
@@ -44,6 +68,28 @@ button:hover {
 }
 
 .status {
-  margin-top: 15px;
+  margin-top: 5px;
   font-weight: bold;
+}
+
+
+/* Responsive */
+@media (max-width: 768px) {
+  .container {
+    margin: 30vh auto;
+
+    flex-direction: column;
+  }
+
+  .contact {
+    width: 60vw;
+    height: 400px;
+  }
+  
+  
+  .mapContainer {
+    width: 60vw;
+    height: 400px;
+    margin-bottom: 20px;
+  }
 }
