--- a/src/components/organisms/Navbar/Navbar.module.css
+++ b/src/components/organisms/Navbar/Navbar.module.css
@@ -15,7 +15,9 @@
 
 
 .scrolled {
-  background-color: var(--color-blue)
+  background-color: var(--color-blue);
+  transition: background-color 0.2s ease-in-out;
+
 }
 
 .heroImg {
@@ -98,7 +100,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 10vh;
+    height: 13vh;
     justify-content: space-between;
   }
 
@@ -107,6 +109,7 @@
     align-items: flex-end;
     gap: 11px;
     z-index: 3;
+    margin-top: 0px;
   }
 
   .menuBtn {
@@ -128,6 +131,10 @@
     );
     padding: 24px 33px;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 80px; /* Ajuste pour bien placer sous le menuBtn */
+
+    right: 10px;
   }
 
   .menuOpen {
