--- a/src/pages/PreLoader/PreLoader.module.css
+++ b/src/pages/PreLoader/PreLoader.module.css
@@ -1,7 +1,10 @@
+@import "../../vars.css";
+
+
 .preloader {
     height: 100vh;
     width: 100%;
-    background: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
     position: fixed;
     bottom: 0;
     left: 0;
@@ -10,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: var(--color-red);
     overflow: hidden !important;
 
     
@@ -22,7 +25,7 @@
     align-items: center;
     justify-content: space-between;
     height: 60px;
-    width: 280px;
+    width: 30vw;
     font-size: 17px;
     overflow: hidden;
     font-weight: 800;
@@ -33,4 +36,73 @@
 .span {
     margin-top: 100px;
     rotate: 15deg;
+}
+
+/* RESPONSIVE DESIGN */
+@media screen and (max-width: 1024px) {
+    .textsContainer {
+        width: 42vw;
+    }
+
+  }
+
+
+@media screen and (max-width: 768px) {
+
+    .textsContainer {
+        width: 48vw;
+    }
+
+}
+
+
+@media screen and (max-width: 680px) {
+
+    .textsContainer {
+        width: 52vw;
+    }
+
+}
+
+
+@media screen and (max-width: 606px) {
+
+    .textsContainer {
+        width: 58vw;
+    }
+
+}
+
+
+@media screen and (max-width: 545px) {
+
+    .textsContainer {
+        width: 62vw;
+    }
+
+}
+
+
+@media screen and (max-width: 510px) {
+
+    .textsContainer {
+        width: 70vw;
+    }
+
+}
+
+@media screen and (max-width: 460px) {
+
+    .textsContainer {
+        width: 80vw;
+    }
+
+}
+
+@media screen and (max-width: 390px) {
+
+    .textsContainer {
+        width: 90vw;
+    }
+
 }
