--- a/src/components/organisms/About/About.module.css
+++ b/src/components/organisms/About/About.module.css
@@ -169,7 +169,7 @@
     padding-left: 0;
     padding-right: 0;
     margin-top: 12vh;
-    padding: 20px;
+    padding: 20px 0;
   }
 
   .content {
