--- a/src/components/organisms/Service/Service.module.css
+++ b/src/components/organisms/Service/Service.module.css
@@ -110,6 +110,64 @@
 }
 
 
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContent {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 400px;
+  position: relative;
+  max-height: 70vh;
+  overflow-y: auto; /* Permet le scroll vertical */
+
+}
+
+.closeButton {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+
+}
+
+.modalImage {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.modalTitle {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.modalDescription {
+  font-size: 16px;
+  color: #555;
+  text-align: left;
+}
+
+.modalPhone {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+
+
 /* RESPONSIVE DESIGN */
 
 @media screen and (max-width: 1074px) {
