--- a/src/components/organisms/Service/Service.module.css
+++ b/src/components/organisms/Service/Service.module.css
@@ -29,6 +29,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
+  min-height: 300px;
 }
 
 /* Grille des services */
@@ -198,6 +199,10 @@
 
   .card {
     width: 80vw;
+  }
+
+  .bgTitle {
+    min-height: 200px;
   }
 }
 
